--- a/src/pages/slide/slide.html
+++ b/src/pages/slide/slide.html
@@ -1,18 +1,18 @@
 <!--
-  Generated template for the Content page.
+  Generated template for the Slide page.
 
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-
 <ion-header>
+
   <ion-navbar>
-    <ion-title>
-      testasdfasdfasdasdf
-    </ion-title>
+    <ion-title>slide</ion-title>
   </ion-navbar>
+
 </ion-header>
 
+
 <ion-content padding>
-  jhbnsfasdfasdfs
+
 </ion-content>
