Good point to rollback changes at

--- a/src/pages/cards/cards.html
+++ b/src/pages/cards/cards.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>cards</ion-title>
+    <ion-title>{{card.cardTitle}}</ion-title>
   </ion-navbar>
 
 </ion-header>
