--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,7 +5,6 @@
 <ion-content class="container">
   <ion-slides class="slides-container" pager>
     <ion-slide *ngFor="let slide of slides" class="student-spotlight-image">
-      <!--<div style="background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 80%, black 100%, rgba(0, 0, 0, 0.65) 100%), url({{slide.studentImage}});background-size: cover; z-index: 1000;">-->
         <h1 class="student-spotlight"> Student Spotlight </h1>
         <h2 class="slide-student" >{{slide.studentName}}</h2>
         <p class="slide-studentSchool">{{slide.studentSchool}}</p>
@@ -13,7 +12,7 @@
   </ion-slides>
 
   <div class="cards">
-    <ion-card class="ion-card" *ngFor="let card of cards">
+    <ion-card class="ion-card" *ngFor="let card of cards" (click)="viewCard(card);">
     <ion-card-content>
       <ion-card-title>
         {{card.cardTitle}}
@@ -39,20 +38,5 @@
     </ion-row>
    </ion-card>
  </div>
-
-   <!--<div class="cards">
-    <ion-card class="ion-card" *ngFor="let card of cards">
-      <ion-card-header>
-        {{card.cardTitle}}
-      </ion-card-header>
-      <ion-card-content>
-       {{card.cardContent}}
-     </ion-card-content>
-   </ion-card>
- </div>-->
-
-
-
- 
 
 </ion-content>
