--- a/src/pages/cards/cards.html
+++ b/src/pages/cards/cards.html
@@ -1,18 +1,22 @@
-<!--
-  Generated template for the Cards page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
+ <ion-header>
   <ion-navbar>
-    <ion-title>{{card.cardTitle}}</ion-title>
+    <ion-title style="display: inline;">For You</ion-title>
+        <ion-row no-padding>
+      <ion-col text-right>
+        <button ion-button clear small color="primary" icon-left>
+          <ion-icon name='share-alt'></ion-icon>
+        </button>
+      </ion-col>
+    </ion-row>
   </ion-navbar>
 
+
+<img class= "cards-content-image" src="{{card.cardImage}}">
+
+<h2>{{card.cardTitle}}</h2>
+
+<p>{{card.cardArticle}}</p>
+
 </ion-header>
-
-
 <ion-content padding>
-
 </ion-content>
