--- a/src/pages/cards/cards.html
+++ b/src/pages/cards/cards.html
@@ -10,12 +10,11 @@
     </ion-row>
   </ion-navbar>
 
-
 <img class= "cards-content-image" src="{{card.cardImage}}">
 
-<h2>{{card.cardTitle}}</h2>
+<h2 class="cards-content-heading-two">{{card.cardTitle}}</h2>
 
-<p>{{card.cardArticle}}</p>
+<p class="cards-content-paragraph">{{card.cardArticle}}</p>
 
 </ion-header>
 <ion-content padding>
