Shit works, bless up

--- a/src/pages/slides/slides.html
+++ b/src/pages/slides/slides.html
@@ -6,12 +6,11 @@
     </ion-buttons>
   </ion-navbar>
 
-<img class= "cards-content-image" [src]={{slide.studentImage}}>
+<img class= "cards-content-image" src="{{slide.studentImage}}">
 
 <h2 class="cards-content-heading-two">{{slide.studentName}}</h2>
 
 <p class="cards-content-paragraph">{{slide.studentStory}}</p>
-
 
 
 </ion-header>
