--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,13 +1,16 @@
 <ion-header>
-
 </ion-header>
 
 <ion-content class="container">
+    <ion-refresher (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
   <ion-slides class="slides-container" pager>
     <ion-slide *ngFor="let slide of slides" class="student-spotlight-image" (click)="presentModal(slide);">
-        <h1 class="student-spotlight"> Student Spotlight </h1>
-        <h2 class="slide-student" >{{slide.studentName}}</h2>
-        <p class="slide-studentSchool">{{slide.studentSchool}}</p>
+                <h1 class="student-spotlight"> Student Spotlight </h1>
+               <h2 class="slide-student">{{slide.studentName}}</h2>
+              <p class="slide-studentSchool">{{slide.studentSchool}}</p>
+
     </ion-slide>
   </ion-slides>
 
@@ -37,6 +40,10 @@
       </ion-col>
     </ion-row>
    </ion-card>
+<!--
+  <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+   <ion-infinite-scroll-content></ion-infinite-scroll-content>
+ </ion-infinite-scroll>-->
  </div>
 
 </ion-content>
