Shits working, need to fix gradient b

--- a/src/pages/cards/cards.html
+++ b/src/pages/cards/cards.html
@@ -1,6 +1,6 @@
  <ion-header>
   <ion-navbar>
-    <ion-title style="display: inline;">For You</ion-title>
+    <ion-title>For You</ion-title>
         <ion-row no-padding>
       <ion-col text-right>
         <button ion-button clear small color="primary" icon-left>
