Trying to make son requests to data work

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -34,7 +34,7 @@
       </ion-col>
 
       <ion-col text-right>
-        <button ion-button clear small color="primary" icon-left (click)="sendToProfile(card)">
+        <button ion-button clear small color="primary" icon-left>
           <ion-icon name='share-alt'></ion-icon>
           Share
         </button>
