This shit works fam

--- a/src/pages/cards/cards.html
+++ b/src/pages/cards/cards.html
@@ -10,11 +10,11 @@
     </ion-row>
   </ion-navbar>
 
-<img class= "cards-content-image" src="{{card.cardImage}}">
+<img class= "cards-content-image" src="{{program.Image}}">
 
-<h2 class="cards-content-heading-two">{{card.cardTitle}}</h2>
+<h2 class="cards-content-heading-two">{{program.Name}}</h2>
 
-<p class="cards-content-paragraph">{{card.cardArticle}}</p>
+<p class="cards-content-paragraph">{{program.Details}}</p>
 
 </ion-header>
 <ion-content padding>
