--- a/src/pages/slides/slides.html
+++ b/src/pages/slides/slides.html
@@ -5,12 +5,16 @@
       <button ion-button icon-only (click)="closeModal()"><ion-icon icon name="close"></ion-icon></button>
     </ion-buttons>
   </ion-navbar>
+  </ion-header>
+
+<ion-content class="scrollableBoxForSlides" padding>
+
 
 <img class= "cards-content-image" src="{{student.image}}">
  
 <p class="cards-content-paragraph">{{student.article}}</p>
 
 
-</ion-header>
-<ion-content padding>
 </ion-content>
+
+
