Added other peoples pages

--- a/src/pages/cards/cards.html
+++ b/src/pages/cards/cards.html
@@ -1,5 +1,5 @@
  <ion-header>
-  <ion-navbar>
+  <ion-navbar color=white>
     <ion-title>For You</ion-title>
         <ion-buttons end>
       <button ion-button icon-only color="royal">
@@ -10,10 +10,14 @@
 </ion-header>
 
 <ion-content padding class="article">
+
   <img class="article-image" src="{{program.Image}}">
-
-<h2 class="article-heading">{{program.Name}}</h2>
-
-<p class="article-paragraph">{{program.Details}}</p>
+  <img class="article-logo" src="{{program.Logo}}">
+  <h3 class="article-heading">{{program.Name}}</h3>
+  <div class="article-separator"></div>
+  <hr>
+  <div class="article-company">{{program.Company}}</div>
+  <div class="article-author">{{program.Author}} • {{program.Date}}</div>
+  <p class="article-paragraph">{{program.Details}}</p>
 
 </ion-content>
