--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -27,7 +27,7 @@
           {{program.Name}}
         </ion-card-title>
         <p (click)="viewProgram(program);">
-          {{program.Details}}
+          {{program.What}}
         </p>
       </ion-card-content>
 
@@ -45,10 +45,6 @@
         </ion-col>
       </ion-row>
     </ion-card>
-
-     <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
-   <ion-infinite-scroll-content></ion-infinite-scroll-content>
- </ion-infinite-scroll>
   </div>
 
 </ion-content>
