--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,3 +1,6 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Q&A" tabIcon="ios-paper-plane"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Planner" tabIcon="ios-calendar"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Profile" tabIcon="md-bookmarks"></ion-tab>
 </ion-tabs>
